# ClothSim

./: CMakeLists.txt  Readme.md
Template/Headers/: Camera.hpp  ClothMesh.hpp  CustomModel.hpp  ExtraMath.hpp  GUI.hpp  Mesh.hpp  Model.hpp  Shader.hpp  ShadowCubemap.hpp  ShadowMap.hpp  Skybox.hpp  Sphere.hpp  Tests.hpp  glitter.hpp
Template/Shaders/: basic_model.fs  basic_model.vert  clothShader.geom  customModelShader.frag  customModelShader.vert  lighting_shader.frag  lighting_shader.vert  quad.frag  quad.vert  shadowCubeShader.frag  shadowCubeShader.geom  shadowCubeShader.vert  shadowShader.frag  shadowShader.vert
Template/Sources/: GUI.cpp  ShadowCubemap.cpp  ShadowMap.cpp  Skybox.cpp  Timer.cpp  main.cpp
models/: brass_goblets_2k.mtl  floor.mtl
